force-app/main/default/objects/LearningPlanEnrollment__c/LearningPlanEnrollment__c.object-meta.xml
<CustomObject>
    <label>LearningPlanEnrollment</label>
    <nameField>
        <displayFormat>LPE-{00000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LearningPlanEnrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>