force-app/main/default/objects/LearningPlanEnrollment__c/fields/CoursesRecalculation__c.field-meta.xml
<CustomField>
    <fullName>CoursesRecalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoursesRecalculation</label>
    <type>Checkbox</type>
</CustomField>