force-app/main/default/objects/LearningPlanEnrollment__c/fields/idst__c.field-meta.xml
<CustomField>
    <fullName>idst__c</fullName>
    <externalId>true</externalId>
    <label>idst</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>