force-app/main/default/objects/LearningPlanEnrollment__c/fields/Learning_Plan__c.field-meta.xml
<CustomField>
    <fullName>Learning_Plan__c</fullName>
    <label>Learning Plan</label>
    <referenceTo>Learning_Plan__c</referenceTo>
    <relationshipLabel>LearningPlanEnrollments</relationshipLabel>
    <relationshipName>LearningPlanEnrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>