force-app/main/default/objects/LearningPlanEnrollment__c/validationRules/Integrity_lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Integrity_lookup</fullName>
    <active>true</active>
    <description>Controlla se almeno una lookup verso lo studente è popolata</description>
    <errorConditionFormula>Student_User__c = null  &amp;&amp;  Student_Contact__c = null</errorConditionFormula>
    <errorMessage>Non è stato trovato uno studente a cui associare l&apos;iscrizione</errorMessage>
</ValidationRule>